<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="#307FE2"
            android:textSize="14sp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/p_logo"
            android:layout_marginTop="@dimen/_10dp"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@id/txtSkip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_10dp"
            android:textColor="#307FE2"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imglogo"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imgCardEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="@dimen/_30dp"
            android:background="@drawable/rounded10_grey_bdr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            android:focusable="true">

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_email"
                android:adjustViewBounds="true"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@+id/imgCardEmail"
                app:layout_constraintTop_toTopOf="@id/imgCardEmail"
                app:layout_constraintBottom_toBottomOf="@+id/imgCardEmail"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textSize="17sp"
                android:focusable="true"
                android:textColorHint="#7E7E7E80"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/imgEmail"
                app:layout_constraintEnd_toEndOf="@+id/imgCardEmail"
                app:layout_constraintTop_toTopOf="@id/imgCardEmail"
                app:layout_constraintBottom_toBottomOf="@+id/imgCardEmail"
                android:layout_marginStart="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imgCardPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded10_grey_bdr"
            android:layout_marginHorizontal="@dimen/_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCardEmail">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_lock"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@+id/imgCardPassword"
                app:layout_constraintTop_toTopOf="@id/imgCardPassword"
                app:layout_constraintBottom_toBottomOf="@+id/imgCardPassword"/>

            <EditText
                android:id="@+id/edtpass"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/pswd"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:textColorHint="#7E7E7E80"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/lock"
                app:layout_constraintEnd_toEndOf="@+id/imgCardPassword"
                app:layout_constraintTop_toTopOf="@id/imgCardPassword"
                app:layout_constraintBottom_toBottomOf="@+id/imgCardPassword"
                android:layout_marginStart="15dp"/>

            <ImageView
                android:id="@+id/eye"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_eye"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="@id/imgCardPassword"
                app:layout_constraintTop_toTopOf="@id/imgCardPassword"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fg_pass"
            android:textColor="#307FE2"
            android:textSize="16sp"
            android:paddingVertical="@dimen/_5dp"
            android:paddingHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/imgCardPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="@dimen/_30dp"
            android:paddingVertical="@dimen/_10dp"
            android:background="@drawable/rounded10_darkblue_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/new_to_grocery"
            android:textAlignment="center"
            android:textColor="#307FE2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>